<resources>
    <string name="app_name">Weekly账本</string>
    <string name="action_settings">Settings</string>
    <string name="equalizer">图表统计</string>
    <string name="subject">条目统计</string>
    <string name="settting">更多</string>
    <string name="toggle_record">收/支</string>
    <string name="delete_tag">←</string>
    <string name="input_budget">输入金额</string>
    <string name="budget_key">budget</string>
    <string name="week_fee">每月预算</string>
    <string name="set_password_graph">设置密码图案</string>
    <string name="category_edit">类别编辑</string>
    <string name="clear">清除</string>
    <string name="output">导出</string>

    <string name="version">版本:测试版1.9r2</string>

    <string name="updateLog">
        <b>2017.9.6 测试版1.9r2</b>
        \n    1.带给你们一个更温柔的界面.
        \n    2.优化时间段选择界面细节.
        \n    3.更完善的数据备份机制.
        \n    4.修复横竖屏切换时崩溃问题.
        \n下次更新预告:
        \n    1,支持锁屏密码设置,记账定时提醒
        \n    2,更新签名,需要卸载现有版本.
        \n    3,So,下次更新为正式版2.0,记得备份数据.
        \n
        \n<b>2017.8.31 测试版1.9r1</b>
        \n    1.修复日期越界问题.
        \n    2.更换检测升级地址,请务必更新,以免无法收到新版本推送
        \n    3.近期不准备开发新功能.悉知
        \n
        \n<b>2017.8.20 测试版1.9</b>
        \n    1.增加数据导入导出功能,再也不怕数据丢失啦
        \n    2.类别编辑逻辑优化,类别修改,删除需要确认后生效
        \n    3.修复在7.0/5.1上的兼容问题,即文件读写权限处理
        \n    4.修复大部分bugs
        \n
        \n<b>2017.8.19 测试版1.8r5</b>
        \n    1.重写时间选择控件
        \n    2.修复在7.0上的兼容问题
        \n    3.修复部分bugs
        \n
        \n<b>2017.8.18 测试版1.8r4</b>
        \n    1.增加自动检测更新功能
        \n    2.增加下载安装包功能
        \n    3.修复bug
        \n
        \n<b>2017.8.3 测试版1.8r3</b>
        \n    1.优化细节与资源
        \n    2.添加指定日期查询
        \n    3.添加截图分享功能
        \n    4.修复bug
        \n
        \n<b>2017.7.27 测试版1.8r2</b>
        \n    1.优化细节与图标
        \n    2.性能优化！！！
        \n    3.修复bug
        \n
        \n<b>2017.7.27 测试版1.8r1</b>
        \n    1.优化细节与图标
        \n    2.去除无用资源
        \n    3.更人性化的设置
        \n    4.修复bug
        \n
        \n<b>2017.7.27 测试版1.8</b>
        \n    1.引入线程,优化效率
        \n    2.修复部分逻辑问题
        \n    3.UI界面细节优化
        \n
        \n<b>2017.7.25 测试版1.7</b>
        \n    1.新增切换周后图表统计跟随显示
        \n    2.修复部分逻辑问题
        \n    3.增强健壮性
        \n
        \n<b>2017.7.24 测试版1.6</b>
        \n    1.修正添加类别后,编辑类别显示错误问题
        \n    2.修正添加类别后pie,bar图表显示不全类别问题
        \n    3.修正类别删除后,存在删除类别时崩溃问题
        \n    4.修正小数位异常问题
        \n
         \n<b>2017.7.23 测试版1.5</b>
        \n    1.添加账目类别增删改查
        \n    2.修正部分bug
        \n
        \n<b>2017.7.22 测试版1.4</b>
        \n    1.添加账目类别顺序编辑
        \n    2.修正部分bug
        \n
        \n<b>2017.7.20 测试版1.3</b>
        \n    1.添加pie,bar图形统计
        \n    2.修正部分bug,优化执行效率
        \n
        \n<b>2017.7.12 测试版1.2</b>
        \n    1.修复图表不同步问题
        \n    2.完成按周,按月,按年列表统计
        \n
        \n<b>2017.7.1 测试版1.1</b>
        \n    1.完成基本的添加修改删除
        \n    2.修复部分bug
        \n
    </string>

    <string name="title_activity_flash">启动页</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="DataRemoveAll"><u>隐藏入口：清空所有数据</u></string>
    <string name="exportdata_tips">Tips:\n1.导出指定时间数据，请到详情页面选择时间后,在详情页的更多选项中选择导出.\n2.数据导出成功后保存在SD卡 /Weekly/exportData/ 文件夹中\n3.导入前请确认已清空数据,否则可能出现数据重复.</string>
    <string name="backup">备份所有数据</string>
</resources>
